# DosInstaller

./: .gitattributes  .gitignore  LICENSE  README.adoc  build.sh  build_compressor.sh  ci_build.sh
.github/workflows/: main.yml
source/: Makefile  blue_menu.cpp  blue_menu.h  decode.cpp  exodecrunch.cpp  install.cpp  install.ini  lzg.h  main.cpp  yar_decompressor.cpp  yar_decompressor.h
tools/compressor/: CMakeLists.txt  compressor.cpp  compressor_test.cpp  exomizer_compression.cpp  exomizer_compression.h
